# cinerec

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/recsys/: cache.py  collaborative.py  content.py  embedder.py  hybrid.py
backend/app/routers/: health.py  movies.py  ratings.py  recommend.py
backend/scripts/: build_embeddings.py  enrich_tmdb.py  evaluate.py  load_data.py  migrate.py
backend/tests/: conftest.py  test_api.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
