[project]
name = "cinerec-backend"
version = "0.1.0"
description = "cinerec - movie recommendation system backend (FastAPI + pgvector)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "numpy>=2.1",
    "scipy>=1.14",
    "scikit-learn>=1.6",
    "pandas>=2.2",
    "implicit>=0.7.2",
    "sentence-transformers>=3.3",
    "httpx>=0.28",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# B008: FastAPI idiom uses Depends()/Query() as argument defaults.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
